--- a/index.html
+++ b/index.html
@@ -1,144 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Click the Noob</title>
+    <title>Click-a-Noob</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            background: #222;
+            color: white;
+            font-family: Arial;
             text-align: center;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
         }
-
-        h1 {
-            color: #333;
-            margin-top: 20px;
-        }
-
         #noob {
-            width: 100px;
-            height: 180px;
-            margin: 20px auto;
+            width: 150px;
             cursor: pointer;
-            background-color: transparent;
-            position: relative;
-            transition: transform 0.1s ease;
+            margin-top: 30px;
         }
-
-        #noob div {
-            position: absolute;
-            transition: background-color 0.1s ease;
+        .shop-item {
+            background: #333;
+            padding: 10px;
+            margin: 10px auto;
+            width: 250px;
+            border-radius: 10px;
+            cursor: pointer;
         }
-
-        .head {
-            width: 80px;
-            height: 80px;
-            background-color: #ffff00;
-            border: 2px solid #000;
-            border-radius: 50%;
-            top: 0;
-            left: 10px;
-        }
-
-        .torso {
-            width: 80px;
-            height: 60px;
-            background-color: #00a2ff;
-            border: 2px solid #000;
-            top: 80px;
-            left: 10px;
-        }
-
-        .left-arm {
-            width: 30px;
-            height: 60px;
-            background-color: #ffff00;
-            border: 2px solid #000;
-            top: 80px;
-            left: -25px;
-            transform-origin: top center;
-            animation: arm-swing 1s linear infinite alternate;
-        }
-
-        .right-arm {
-            width: 30px;
-            height: 60px;
-            background-color: #ffff00;
-            border: 2px solid #000;
-            top: 80px;
-            right: -25px;
-            transform-origin: top center;
-            animation: arm-swing 1s linear infinite alternate-reverse;
-        }
-
-        .left-leg {
-            width: 30px;
-            height: 70px;
-            background-color: #00a2ff;
-            border: 2px solid #000;
-            top: 140px;
-            left: 10px;
-        }
-
-        .right-leg {
-            width: 30px;
-            height: 70px;
-            background-color: #00a2ff;
-            border: 2px solid #000;
-            top: 140px;
-            right: 10px;
-        }
-
-        #score {
-            font-size: 24px;
-            color: #333;
-            margin-top: 20px;
-        }
-
-        @keyframes arm-swing {
-            0% {
-                transform: rotate(-15deg);
-            }
-            100% {
-                transform: rotate(15deg);
-            }
-        }
-
-        .hurt {
-            background-color: #ff0000 !important;
+        .shop-item:hover {
+            background: #444;
         }
     </style>
 </head>
 <body>
-    <h1>Click the Roblox Noob!</h1>
-    <div id="noob">
-        <div class="head"></div>
-        <div class="torso"></div>
-        <div class="left-arm"></div>
-        <div class="right-arm"></div>
-        <div class="left-leg"></div>
-        <div class="right-leg"></div>
+
+    <h1>Click-a-Noob</h1>
+
+    <h2>Score: <span id="score">0</span></h2>
+
+    <img id="noob" src="https://i.imgur.com/6o5ZB0z.png">
+
+    <h2>Store</h2>
+
+    <div class="shop-item" onclick="buyUpgrade()">
+        +1 per click — Cost: <span id="upgradeCost">20</span>
     </div>
-    <div id="score">Score: 0</div>
 
-    <script>
-        let score = 0;
-        const noob = document.getElementById('noob');
-        const scoreDisplay = document.getElementById('score');
+    <div class="shop-item" onclick="buyAuto()">
+        Auto-Clicker — Cost: <span id="autoCost">100</span>
+    </div>
 
-        noob.addEventListener('click', function() {
-            score++;
-            scoreDisplay.textContent = 'Score: ' + score;
+<script>
+    // --------------------
+    // LOAD SAVE DATA
+    // --------------------
+    let score = Number(localStorage.getItem("score")) || 0;
+    let clickPower = Number(localStorage.getItem("clickPower")) || 1;
+    let upgradeCost = Number(localStorage.getItem("upgradeCost")) || 20;
 
-            // "Hurt" effect
-            noob.classList.add('hurt');
-            setTimeout(() => {
-                noob.classList.remove('hurt');
-            }, 100); // Remove the class after 100ms
-        });
-    </script>
+    let autoClickers = Number(localStorage.getItem("autoClickers")) || 0;
+    let autoCost = Number(localStorage.getItem("autoCost")) || 100;
+
+    // SHOW LOADED VALUES
+    document.getElementById("score").textContent = score;
+    document.getElementById("upgradeCost").textContent = upgradeCost;
+    document.getElementById("autoCost").textContent = autoCost;
+
+    // --------------------
+    // SAVE GAME FUNCTION
+    // --------------------
+    function saveGame() {
+        localStorage.setItem("score", score);
+        localStorage.setItem("clickPower", clickPower);
+        localStorage.setItem("upgradeCost", upgradeCost);
+        localStorage.setItem("autoClickers", autoClickers);
+        localStorage.setItem("autoCost", autoCost);
+    }
+
+    // --------------------
+    // CLICK NOOB
+    // --------------------
+    document.getElementById("noob").onclick = function () {
+        score += clickPower;
+        document.getElementById("score").textContent = score;
+        saveGame();
+    };
+
+    // --------------------
+    // BUY +1 CLICK POWER UPGRADE
+    // --------------------
+    function buyUpgrade() {
+        if (score >= upgradeCost) {
+            score -= upgradeCost;
+            clickPower++;
+            upgradeCost = Math.floor(upgradeCost * 1.5);
+
+            document.getElementById("score").textContent = score;
+            document.getElementById("upgradeCost").textContent = upgradeCost;
+            saveGame();
+        }
+    }
+
+    // --------------------
+    // BUY AUTO CLICKER
+    // --------------------
+    function buyAuto() {
+        if (score >= autoCost) {
+            score -= autoCost;
+            autoClickers++;
+            autoCost = Math.floor(autoCost * 1.8);
+
+            document.getElementById("score").textContent = score;
+            document.getElementById("autoCost").textContent = autoCost;
+            saveGame();
+        }
+    }
+
+    // --------------------
+    // AUTO CLICK LOOP
+    // --------------------
+    setInterval(() => {
+        if (autoClickers > 0) {
+            score += autoClickers;
+            document.getElementById("score").textContent = score;
+            saveGame();
+        }
+    }, 1000);
+</script>
+
 </body>
 </html>
