--- a/index.html
+++ b/index.html
@@ -1,198 +1,167 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Click-a-Noob</title>
+    <title>Click-a-Noob | Full Version</title>
     <style>
         body {
-            background: #222;
+            background: #1b1b1b;
             color: white;
-            font-family: Arial;
+            font-family: Arial, sans-serif;
             text-align: center;
+            user-select: none;
         }
 
-        /* --- NOOB ANIMATION --- */
         #noob {
-            width: 150px;
+            width: 200px;
             cursor: pointer;
             margin-top: 30px;
-            animation: wiggle 1.1s infinite ease-in-out;
         }
 
-        @keyframes wiggle {
-            0% { transform: rotate(0deg) scale(1); }
-            25% { transform: rotate(2deg) scale(1.03); }
-            50% { transform: rotate(0deg) scale(1); }
-            75% { transform: rotate(-2deg) scale(1.03); }
-            100% { transform: rotate(0deg) scale(1); }
+        #score {
+            font-size: 40px;
+            margin-top: 20px;
+            font-weight: bold;
         }
 
-        .shop-item {
-            background: #333;
-            padding: 10px;
-            margin: 10px auto;
-            width: 300px;
-            border-radius: 10px;
+        .shop {
+            margin-top: 40px;
+        }
+
+        .shop button {
+            background: #ffd24a;
+            border: none;
+            padding: 12px 20px;
+            font-size: 18px;
+            border-radius: 12px;
+            margin: 10px;
             cursor: pointer;
+            transition: 0.15s;
         }
-        .shop-item:hover {
-            background: #444;
+
+        .shop button:hover {
+            transform: scale(1.1);
+            background: #ffea84;
         }
     </style>
 </head>
 <body>
 
     <h1>Click-a-Noob</h1>
+    <div id="score">Clicks: 0</div>
 
-    <h2>Score: <span id="score">0</span></h2>
+    <!-- Classic blue/yellow noob model (animated GIF) -->
+    <img id="noob" src="https://i.imgur.com/7cU5gkC.gif">
 
-    <!-- YOUR NOOB IMAGE -->
-    <img id="noob" src="noob.png">
+    <div class="shop">
+        <h2>Shop</h2>
 
-    <h2>Store</h2>
+        <button onclick="buyX2()">x2 Clicks (Cost: 100)</button>
+        <br>
+        <button onclick="buyGolden()">Golden Noob (Cost: 500)</button>
+    </div>
 
-    <!-- OLD UPGRADES -->
-    <div class="shop-item" onclick="buyUpgrade()">+1 per click — Cost: <span id="upgradeCost">20</span></div>
-    <div class="shop-item" onclick="buyAuto()">Auto Clicker — Cost: <span id="autoCost">100</span></div>
-
-    <!-- NEW UPGRADES -->
-    <div class="shop-item" onclick="buyX2()">x2 Click Multiplier — Cost: <span id="x2Cost">500</span></div>
-    <div class="shop-item" onclick="buyGolden()">Golden Noob (10× per click) — Cost: <span id="goldCost">2500</span></div>
-    <div class="shop-item" onclick="buySuperAuto()">Super Auto Clicker (5/sec) — Cost: <span id="superCost">5000</span></div>
-    <div class="shop-item" onclick="prestige()">Prestige Reset (+2x Permanent Boost) — Cost: <span id="prestigeCost">50000</span></div>
+    <!-- Audio -->
+    <audio id="clickSfx" src="https://assetdelivery.roblox.com/v1/asset/?id=138083894"></audio>
+    <audio id="buySfx" src="https://assetdelivery.roblox.com/v1/asset/?id=911882310"></audio>
+    <audio id="selectSfx" src="https://assetdelivery.roblox.com/v1/asset/?id=138097048"></audio>
+    <audio id="music" src="https://assetdelivery.roblox.com/v1/asset/?id=1836788367" loop autoplay></audio>
 
 <script>
-    // --------------------
-    // LOAD SAVE DATA
-    // --------------------
-    let score = Number(localStorage.getItem("score")) || 0;
-    let clickPower = Number(localStorage.getItem("clickPower")) || 1;
-    let autoClickers = Number(localStorage.getItem("autoClickers")) || 0;
-    let superAuto = Number(localStorage.getItem("superAuto")) || 0;
-    let prestigeBoost = Number(localStorage.getItem("prestigeBoost")) || 1;
+let score = 0;
+let clickPower = 1;
+let x2Bought = false;
+let goldenBought = false;
 
-    // COSTS
-    let upgradeCost = Number(localStorage.getItem("upgradeCost")) || 20;
-    let autoCost = Number(localStorage.getItem("autoCost")) || 100;
-    let x2Cost = Number(localStorage.getItem("x2Cost")) || 500;
-    let goldCost = Number(localStorage.getItem("goldCost")) || 2500;
-    let superCost = Number(localStorage.getItem("superCost")) || 5000;
-    let prestigeCost = 50000;
+// Load saved data
+window.onload = () => {
+    let save = localStorage.getItem("clickGame");
+    if (save) {
+        let data = JSON.parse(save);
+        score = data.score;
+        clickPower = data.clickPower;
+        x2Bought = data.x2Bought;
+        goldenBought = data.goldenBought;
 
-    // DISPLAY SAVED VALUES
-    document.getElementById("score").textContent = score;
-    document.getElementById("upgradeCost").textContent = upgradeCost;
-    document.getElementById("autoCost").textContent = autoCost;
-    document.getElementById("x2Cost").textContent = x2Cost;
-    document.getElementById("goldCost").textContent = goldCost;
-    document.getElementById("superCost").textContent = superCost;
-    document.getElementById("prestigeCost").textContent = prestigeCost;
-
-    // SAVE FUNCTION
-    function saveGame() {
-        localStorage.setItem("score", score);
-        localStorage.setItem("clickPower", clickPower);
-        localStorage.setItem("autoClickers", autoClickers);
-        localStorage.setItem("superAuto", superAuto);
-        localStorage.setItem("prestigeBoost", prestigeBoost);
-        localStorage.setItem("upgradeCost", upgradeCost);
-        localStorage.setItem("autoCost", autoCost);
-        localStorage.setItem("x2Cost", x2Cost);
-        localStorage.setItem("goldCost", goldCost);
-        localStorage.setItem("superCost", superCost);
-    }
-
-    // CLICK NOOB
-    document.getElementById("noob").onclick = function () {
-        score += clickPower * prestigeBoost;
-        document.getElementById("score").textContent = score;
-        saveGame();
-    };
-
-    // +1 UPGRADE
-    function buyUpgrade() {
-        if (score >= upgradeCost) {
-            score -= upgradeCost;
-            clickPower++;
-            upgradeCost = Math.floor(upgradeCost * 1.5);
-            updateDisplay();
+        if (goldenBought) {
+            document.getElementById("noob").src = "https://i.imgur.com/AQqWf7v.png"; // golden noob
         }
     }
+    updateUI();
 
-    // AUTO CLICKER
-    function buyAuto() {
-        if (score >= autoCost) {
-            score -= autoCost;
-            autoClickers++;
-            autoCost = Math.floor(autoCost * 1.8);
-            updateDisplay();
-        }
-    }
+    // Start background music
+    const music = document.getElementById("music");
+    music.volume = 0.35;
+    music.play().catch(() => {});
+};
 
-    // x2 MULTIPLIER
-    function buyX2() {
-        if (score >= x2Cost) {
-            score -= x2Cost;
-            clickPower *= 2;
-            x2Cost = Math.floor(x2Cost * 2.4);
-            updateDisplay();
-        }
-    }
+// Click noob
+document.getElementById("noob").addEventListener("click", () => {
+    score += clickPower;
 
-    // GOLDEN NOOB (10× PER CLICK)
-    function buyGolden() {
-        if (score >= goldCost) {
-            score -= goldCost;
-            clickPower *= 10;
-            goldCost = Math.floor(goldCost * 3);
-            updateDisplay();
-        }
-    }
+    const sfx = document.getElementById("clickSfx");
+    sfx.currentTime = 0;
+    sfx.play();
 
-    // SUPER AUTO CLICKER (5 PER SEC)
-    function buySuperAuto() {
-        if (score >= superCost) {
-            score -= superCost;
-            superAuto++;
-            superCost = Math.floor(superCost * 2.5);
-            updateDisplay();
-        }
-    }
+    updateUI();
+    saveGame();
+});
 
-    // PRESTIGE SYSTEM
-    function prestige() {
-        if (score >= prestigeCost) {
-            score = 0;
-            clickPower = 1;
-            autoClickers = 0;
-            superAuto = 0;
-            prestigeBoost *= 2;
+// Button hover sound
+document.querySelectorAll("button").forEach(btn => {
+    btn.addEventListener("mouseenter", () => {
+        const sfx = document.getElementById("selectSfx");
+        sfx.currentTime = 0;
+        sfx.play();
+    });
+});
 
-            updateDisplay();
-        }
-    }
+// Shop functions
+function buyX2() {
+    if (score >= 100 && !x2Bought) {
+        score -= 100;
+        clickPower = 2;
+        x2Bought = true;
 
-    // UPDATE DISPLAY
-    function updateDisplay() {
-        document.getElementById("score").textContent = score;
-        document.getElementById("upgradeCost").textContent = upgradeCost;
-        document.getElementById("autoCost").textContent = autoCost;
-        document.getElementById("x2Cost").textContent = x2Cost;
-        document.getElementById("goldCost").textContent = goldCost;
-        document.getElementById("superCost").textContent = superCost;
+        playBuySound();
+        updateUI();
         saveGame();
     }
+}
 
-    // AUTO CLICK LOOPS
-    setInterval(() => {
-        score += autoClickers * prestigeBoost;
-        updateDisplay();
-    }, 1000);
+function buyGolden() {
+    if (score >= 500 && !goldenBought) {
+        score -= 500;
+        goldenBought = true;
 
-    setInterval(() => {
-        score += (superAuto * 5) * prestigeBoost;
-        updateDisplay();
-    }, 1000);
+        document.getElementById("noob").src = "https://i.imgur.com/AQqWf7v.png";
 
+        playBuySound();
+        updateUI();
+        saveGame();
+    }
+}
+
+// Buy sound
+function playBuySound() {
+    const sfx = document.getElementById("buySfx");
+    sfx.currentTime = 0;
+    sfx.play();
+}
+
+// Update score display
+function updateUI() {
+    document.getElementById("score").innerText = "Clicks: " + score;
+}
+
+// Save game
+function saveGame() {
+    localStorage.setItem("clickGame", JSON.stringify({
+        score,
+        clickPower,
+        x2Bought,
+        goldenBought
+    }));
+}
 </script>
 
 </body>
